[package]
name = "route-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-nom"]

with-nom = ["dep:nom", "dep:nom-supreme"]
handparser = []

[dependencies]

thiserror = "*"
regex = "*"
nom = { version = "7.1.1", optional = true }
nom-supreme = { version = "0.8.0", optional = true }

[dev-dependencies]
insta = { version = "1.17.1", features = ["redactions", "yaml"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
