[package]
name = "route-pattern"
version = "0.1.0"
edition = "2021"

description = "A parser and matcher for route patterns"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/route-pattern/"
repository = "https://github.com/jondot/route-pattern"
keywords = ["parser", "route", "match"]
license = "Apache-2.0"
readme = "../README.md"

[features]
default = ["with-nom"]

with-nom = ["dep:nom", "dep:nom-supreme"]
handparser = []

[dependencies]

thiserror = "*"
regex = "*"
nom = { version = "7.1.1", optional = true }
nom-supreme = { version = "0.8.0", optional = true }

[dev-dependencies]
insta = { version = "1.17.1", features = ["redactions", "yaml"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
